# project-survivor

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  asan.sh  dev.sh  docs.sh  fps-release.sh  profile.sh  release.sh  tests.sh
build-release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  survivor
build-release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ecs
dev-notes/: PLAN.md  STATUS.md
include/survivor/: ability_system.h  ecs.h
include/survivor/platform/: renderer.hpp
scripts/: coverage.sh  main.lua  mutation.sh  patch_imgui_node_editor_compat.sh
shaders/: fs_hex_grid.sc  fs_hex_grid_textured.sc  fs_hex_grid_textured_simple.sc  fs_postprocess.sc  fs_sprite.sc  varying.def.sc  vs_hex_grid.sc  vs_hex_grid_instanced.sc  vs_hex_grid_textured_instanced.sc  vs_hex_grid_textured_instanced_simple.sc  vs_postprocess.sc  vs_sprite.sc
src/: main.cpp
src/core/: ability_system.c  ecs.c  math_utils.c
src/platform/: app.cpp  greyscale_effect.cpp  renderer.cpp  screen_manager.cpp  texture_manager.cpp  ui_layer.cpp
tests/: CMakeLists.txt  test_ecs.c
